# speaker-id

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _TODO.txt  pyproject.toml
.github/workflows/: docker-publish.yml
app/: embeddings.py  main.py
app/api/: __init__.py  routes_admin.py  routes_config.py  routes_enroll.py  routes_identify.py
app/core/: config.py  lifecycle.py  logging.py
app/observability/: metrics.py
app/schemas/: common.py  identify.py
app/services/: centroid.py  embeddings.py  identify.py  qdrant_repo.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js
app/utils/: audio.py  ids.py  timing.py
app/web/: index.html
app/web/css/: styles.css
app/web/js/: api.js  app.js
configs/: app.config.example.yaml  qdrant-collections.yaml
docker/: Dockerfile  Dockerfile.ecapa  compose.yaml
docs/: api.md  deployment.md  ha-integration.md  latency.md  models.md  overview.md  qdrant.md  security.md  solution_details.md  web-interface.md
pretrained_models/EncoderClassifier-8f6f7fdaa9628acf73e21ad1f99d5f83/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
scripts/: bench_identify.py  export_profiles.py  init_qdrant.py  rebuild_centroids.py  slice_wavs.py
tests/: conftest.py  test_api.py  test_metrics.py
